--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+body{
+  background-color: #0F3D3E;
+  font-family: 'Montserrat', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+}
+
+.card{
+  background-color: #F1F1F1;
+  border-radius: 5px;
+  text-align: center;
+  flex:1;
+  margin: 10px;
+  padding: 10px;
+}
+
+.centerDiv{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h1,.colorP{
+  color: #F1F1F1;
+  text-shadow:-5px 5px 0px #00bdbd4b;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2{
+  color: #0F3D3E;
+}
+
+button{
+  background-color: #F1F1F1;
+  color:#0F3D3E ;
+  border: 1px solid #0F3D3E;
+  padding: 5px;
+}
+
+img{
+  border-top: 1px solid #0F3D3E;
+  border-bottom: 1px solid #0F3D3E;
 }
